# functionflow

./: .gitignore  .ycm_extra_conf.py  CMakeLists.md  CMakeLists.txt  README.md  TODO.txt  build.sh  functionflow.git.kdev4  functionflow.kdev4  index.html  params.json  runBM.py  runBM.sh  subprocess
.kdev4/: functionflow.git.kdev4
benchmark/: CMakeLists.txt  Makefile  cmp_ff_opt.sh  gatline.sh  overhead_opt.sh  performance.sh  readme  run.sh  runBM.py  scalibity.sh
benchmark/LU/: CMakeLists.txt  LU_resolve.cpp  gen_matrix.cpp  main.cpp  matrix.h  matrix.txt
benchmark/LU/ff/: CMakeLists.txt  LU_matrix.txt  LU_resolve.cpp  gen_matrix.cpp  lu.cpp  lu_main.cpp  main.cpp  matrix.h  matrix.txt  matrixLU.txt  opt_lu_main.cpp  test.cpp
benchmark/LU/openmp/: Makefile  lu.cpp  lu_main.cpp  runBM.py
benchmark/LU/tbb/: Makefile  lu.cpp  lu_main.cpp  runBM.py
benchmark/TreeSum/: CMakeLists.txt  SerialSumTree.cpp  TreeMaker.h  common.h  main.cpp
benchmark/TreeSum/ff/: ff_sum_tree.cpp
benchmark/TreeSum/tbb/: opt_sum_tree.cpp  sum_tree.cpp
benchmark/bitonic_sort/: CMakeLists.txt  main.cpp
benchmark/bitonic_sort/ff/: bitonic.cpp  opt_bitonic.cpp
benchmark/builder/: benchmark_configs.py  build.py  common_config.py  parse.cpp  parse.py  test_gcc_opt.py
benchmark/builder/command/: bomb.py  clean.sh  jbomber.sh  main.tex.template  pgf.py  plot.py  pp.sh
benchmark/canny/: CMakeLists.txt  canny_edge_detector.cpp  canny_edge_detector.h  main.cpp
benchmark/canny/ff/: .kdev_include_paths  CMakeLists.txt  Makefile  canny_edge_detector.cpp  canny_edge_detector.h  normal_run_canny.cpp  opt_run_canny.cpp  run_canny.cpp
benchmark/canny/openmp/: Makefile  canny_edge_detector.cpp  canny_edge_detector.h  runBM.py  run_canny.cpp
benchmark/canny/tbb/: Makefile  canny_edge_detector.cpp  canny_edge_detector.h  runBM.py  run_canny.cpp
benchmark/fibonacci/: CMakeLists.txt  main.cpp
benchmark/fibonacci/ff/: fib.cpp
benchmark/fibonacci/openmp/: Makefile  fib_omp.cpp  runBM.py
benchmark/fibonacci/tbb/: Makefile  fib.cpp  runBM.py
benchmark/kmeans/: CMakeLists.txt  Lloyd.cpp  Lloyd.h  header.h  main.cpp
benchmark/kmeans/ff/: Lloyd.cpp  Lloyd.h  kmeans.cpp  main.cpp  opt_kmeans.cpp  point.cpp  point.h
benchmark/kmeans/openmp/: Lloyd.cpp  Lloyd.h  Makefile  kmeans.cpp  main.cpp  runBM.py
benchmark/kmeans/tbb/: Lloyd.cpp  Lloyd.h  Makefile  kmeans.cpp  main.cpp  point.cpp  point.h  runBM.py
benchmark/kmeans/tbb/data/: gaussian.txt  makeData.cpp
benchmark/makefiles/: Makefile.base  Makefile.ff  Makefile.openmp  Makefile.tbb
benchmark/mutex/: CMakeLists.txt
benchmark/mutex/ff/: test_mutex.cpp
benchmark/mutex/openmp/: Makefile  runBM.py  test_mutex.cpp
benchmark/mutex/tbb/: Makefile  mutex  runBM.py  test_mutex.cpp
benchmark/n_queen/: CMakeLists.txt  main.cpp
benchmark/n_queen/ff/: n_queen_ff.cpp  nqueen.cpp
benchmark/n_queen/openmp/: Makefile  n_queen_omp.cpp  nqueen.cpp  runBM.py
benchmark/n_queen/tbb/: Makefile  n_queen_tbb.cpp  nqueen.cpp  runBM.py
benchmark/parallel_hash_insert/: CMakeLists.txt
benchmark/parallel_hash_insert/ff/: HashTable.cpp  Helper.hpp  HelperType2.hpp  main.cpp  runtime.cpp  runtime.h
benchmark/parallel_hash_insert/ff/datas/: MakeData.cpp
benchmark/parallel_hash_insert/openmp/: HashTable.h  Makefile  main.cpp  runBM.py
benchmark/parallel_hash_insert/tbb/: HashTable.cpp  HashTable.h  Makefile  main.cpp  runBM.py
benchmark/pbzip/: CMakeLists.txt
benchmark/pbzip/ff/: main.cpp
benchmark/ptd_overhead/: CMakeLists.txt  func_do_base.cpp  func_do_cmp.cpp  main.cpp
benchmark/quad/: CMakeLists.txt  main.cpp  matrix.h
benchmark/quad/ff/: quad.cpp
benchmark/quad/tbb/: quad.cpp
benchmark/quick_sort/: CMakeLists.txt  header.h  main.cpp  makeData.cpp  numbers.txt  quick_sort.cpp
benchmark/quick_sort/ff/: numbers.txt  numbers_sort.txt  quick_sort.cpp
benchmark/quick_sort/openmp/: Makefile  qsort_omp  quick_sort.cpp  quick_sort_omp.cpp  runBM.py
benchmark/quick_sort/tbb/: Makefile  numbers_sort.txt  qsort_tbb  quick_sort.cpp  quick_sort_tbb.cpp  runBM.py
benchmark/quick_sort2/: numbers.txt  quick_sort.cpp
benchmark/scluster/: CMakeLists.txt  Lloyd.cpp  Lloyd.h  header.h  main.cpp  point.cpp  point.h
benchmark/scluster/ff/: opt_scluster.cpp  scluster.cpp
benchmark/scluster/tbb/: scluster.cpp
benchmark/utils/: cache_eval.cpp  cache_eval.h  initial_ff.cpp  initial_openmp.cpp  initial_para_env.h  initial_tbb.cpp  parameter_parser.cpp  parameter_parser.h  rrecord.cpp  rrecord.h  test.cpp  utils.h
benchmark/ws_queue/: CMakeLists.txt  main.cpp  run.sh
compile_failed_test/: README.md  build.py  test_para.cpp  tp1.cpp  tp10.cpp  tp11.cpp  tp12.cpp  tp13.cpp  tp14.cpp  tp15.cpp  tp16.cpp  tp2.cpp  tp3.cpp  tp4.cpp  tp5.cpp  tp6.cpp  tp7.cpp  tp8.cpp  tp9.cpp
docs/: Internal FF(zh).md  Running Guide(zh).md  Running Guide(zh).re  User Guide(zh).md  User Guide(zh).re  type-automata.dot
ff/common/: common.cpp
ff/include/: ff.h
ff/include/common/: .kdev_include_paths  any.h  blocking_queue.h  common.h  error_msg.h  fsetjmp.h  func_type_checker.h  function_traits.h  is_callable.h  log.h  nonblocking_queue.h  test  (+5 more)
ff/para/: para.cpp
ff/runtime/: .runtime.cpp.kate-swp  env.cpp  func_invoke_counter.cpp  runtime.cpp  single_timer.cpp  threadpool.cpp  timer.cpp
ff/src/: common.cpp  rtcmn.cpp  runtime.cpp  wait.cpp
ff/utilities/: mutex.cpp
libs/ff/: log.h  nonblocking_queue.h  scope_guard.h  spinlock.h  threadpool.h
mt/: plot_mutex.py  test_mutex.cpp
test/: CMakeLists.txt  fib.cpp  hello_world.cpp  main.cpp  numbers_sort.txt  quick_sort.cpp  test_any.cpp  test_bool_expr.cpp  test_callable.cpp  test_compatible.cpp  test_fib.cpp  test_func_with_type.cpp  test_gtwsq.cpp  test_interface.cpp  test_jmp.cpp  test_miso_queue.cpp  test_mutex.cpp  test_paracontainer.cpp  test_paragroup.cpp  test_pl1.cpp  test_range_map.cpp  test_ring_buff.cpp  test_rt.cpp  test_simo_queue.cpp  test_simo_vec_queue.cpp  test_then.cpp  test_thread_local_var.cpp  test_work_steal.cpp
tmp/: CMakeLists.txt  lu.cpp  main.cpp  matrix.h  run.sh
(+60 files in other folders)
