SET(PBZIP_LIST pbzip/ff/main.cpp)
find_package (BZip2)
if(BZip2_FOUND)
  include_directories(${BZIP_INCLUDE_DIRS})
  ADD_EXECUTABLE(pbzip ${PBZIP_LIST})
  target_link_libraries(pbzip ${LIBS} ${BZIP2_LIBRARIES})  
else (BZip2_FOUND)
  message(WARNING "cannot find BZip2, ignore building pbzip")
endif (BZip2_FOUND)
