PROJECT(FF_BENCHMARK)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
MESSAGE(STATUS "This is BINARY dir" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir" ${PROJECT_SOURCE_DIR})
add_definitions(-std=c++11)
add_definitions(-O2)
include_directories(${PROJECT_SOURCE_DIR}/../../ff/include)

add_executable(cppm main.cpp)
add_executable(gccm main.cpp)
add_executable(spinm main.cpp)
target_compile_definitions(cppm PUBLIC USE_CPP11_ATOMIC)
target_compile_definitions(gccm PUBLIC USE_GCC_ATOMIC)
target_compile_definitions(spinm PUBLIC USE_SPIN)
